# EmailRAG

./: README.md  config.py  pyproject.toml
assets/: mini_sample_emails.jsonl  sample_emails.jsonl
rag/: llm_client.py  rag.py  rag_cli.py  utils.py
